Added requests module to uv dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "couchbase==4.4.0",
     "lark-sqlpp==0.0.1",
     "mcp[cli]==1.6.0",
+    "requests==2.32.4"
 ]
 
 [project.urls]
